--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,12 +33,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/emptyNotesImage"
-            android:visibility="visible"
-            android:src="@drawable/img"/>
+            android:layout_width="330dp"
+            android:layout_height="300dp"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="20dp"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:lottie_fileName="anim.json"
+            app:lottie_loop="true"
+            app:lottie_autoPlay="true" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
