--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,8 @@
             android:layout_marginBottom="28dp"
             android:backgroundTint="@color/pink"
             android:clickable="true"
-            android:contentDescription="image"
+            android:contentDescription="@string/image"
+            android:focusable="true"
             android:tintMode="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
